src/test/resources/semantic/error/TS_ERROR_STRUCT_NO_DEFINIDO2.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 9 | COLUMNA 17 | La estructura 'C' no se encuentra definida. |
struct A{

}
impl A{
    .(){}
    st fn m1()->C{
        
    }
}

start{

}